# EXP-tools

./: AUTHORS.rst  CHANGELOG.md  README.md  __init__.py  basis_utils.py  makemodel.py  pyproject.toml  pytest.ini  setup.py  update_kernel.sh  visualize.py
.github/workflows/: build.yml  python-package.yml
EXP_tools/: __init__.py  basis_utils.py  visualize.py
EXP_tools/basis_builder/: makemodel.py
EXPtools/: __init__.py
EXPtools/basis/: __init__.py  basis_utils.py  makemodel.py  profiles.py
EXPtools/basis_builder/: __init__.py  basis_utils.py  makemodel.py  profiles.py
EXPtools/coefficients/: __init__.py  coefficients.py
EXPtools/ios/: ios.py
EXPtools/scf/: __init__.py  fields.py  scf_coefs.py
EXPtools/utils/: __init__.py  basis.py  coefficients.py  coefs_index.py  fields.py  halo.py  indexing.py  profiles.py  units.py
EXPtools/visuals/: __init__.py  exptools.mplstyle  grid.py  projections.py  style.py  visualize.py  visuals3D.py  visuals_3d.py
docs/source/: conf.py  contributing.rst  index.rst  installation.rst  user_guide.rst
docs/source/basis_builder/: index.rst
docs/source/tutorials/: triaxial_halo_analysys.ipynb
docs/source/utils/: index.rst
docs/tutorials/: 3d_fields_render_visualization.ipynb  EXP_workflow_external_halo.ipynb  Grid3D_tutorial.ipynb
notebooks/: halo_shapes.ipynb
tests/: conftest.py  test_basis.py  test_basis_utils.py  test_grid.py  test_makemodel.py  test_plot_style.py  test_profiles.py  test_units.py
tests/data/: plummer_halo_hf.txt  test_cache_plummer_halo.txt  test_plummer_halo_hf.txt
(+1 files in other folders)
